More quillbot tweaks

--- a/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v22-23.md
+++ b/_posts/bible-studies/Colossians/2022-09-08-Colossians-01-v22-23.md
@@ -52,13 +52,13 @@ As a result, I conclude that progressive sanctification theology is a man-made d
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>23</sup>... if indeed you remain in the faith, established and firm, without shifting from the hope of the gospel that you heard. This gospel has also been preached in all creation under heaven, and I, Paul, have become its servant.</i></span> (Colossians 1:23)
 
-What believers fear most is that God will find them wanting when Christ returns to receive his bride. That's why they invented progressive sanctification to avoid hearing God speak to them: *"I never knew you: depart from me, ye that work iniquity."* (Matthew 7:23) But, thankfully, according to verse 22, we will be presented *"holy, without blemish, and blameless"* through the blood of Christ. It is his free gift to those who believe.
+What believers most fear is that when Christ returns to receive his bride, God will find them wanting. To avoid hearing God say to them, *"I never knew you: depart from me, ye that work iniquity,"*  (Matthew 7:23) they invented progressive sanctification. But, thanks to Christ's blood, we will be presented *"holy, without blemish, and blameless,"* according to verse 22. It is a free gift from God to those who believe.
 
-However, there is a catch. You must maintain the *"hope of the gospel that you heard."*  The question is, how do you maintain your position? Many people believe that by continuing to do things associated with the faith, such as attending church, tithing, evangelism, prayer, fasting, and so on. Don't misunderstand me. These things are fine, but you must be careful not to accept them as gospel. They are not the gospel you were taught. Because if you follow this false gospel of works, you will eventually lose faith in God due to repeated and unavoidable failures. Through progressive sanctification, your faith in yourself will demonstrate that you will never be *"holy, without blemish, and blameless"* before God.
+There is, however, a catch. You must keep the *"hope of the gospel that you heard"* alive. The question is, how will you keep your position? Many people believe that by continuing to participate in faith-related activities such as attending church, tithing, evangelism, prayer, fasting, and so on. Don't get me wrong. These are fine, but you must be careful not to take them as gospel. They do not represent the gospel you were taught. Because if you adhere to this false gospel of works, you will eventually lose faith in God as a result of repeated and unavoidable failures. Your faith in yourself will demonstrate that you will never be *"holy, without blemish, and blameless"* before God through progressive sanctification.
 
-The true gospel you heard is simple and it's clearly stated in verse 22: *"he has reconciled you by his physical body through death to present you holy, without blemish, and blameless before him."* It's Jesus' physical body, not you, not any works from your flesh no matter how noble they may appear.
+The true gospel you heard is straightforward, as stated in verse 22: *"he has reconciled you through his physical body through death to present you holy, without blemish, and blameless before him."*  It is Jesus' physical body, not yours, or any works that can come from your flesh, no matter how noble they appear to be.
 
-Sure you should continue to do good works for God, but don't let them become your gospel, because if you do, you will have proven that you don't hold firm to the gospel you heard. My advice is you grow to understand deeply the gospel you heard, that is *"Christ and him crucified"* (1 Cor 2:2), and the works will be byproducts of your genuine faith. Works that are produced from coercion by the law are dead fruits (Romans 7:5). Be content to wait for the Spirit of God to produce fruit that endure into eternity.
+Sure, keep doing good works for God, but don't let them become your gospel, because if you do, you'll have demonstrated that you don't believe the gospel you heard. My advice is to grow in your understanding of the gospel you heard, which is *"Christ and him crucified"* (1 Cor 2:2), and the works will come as a result of your genuine faith. Dead fruits are works produced as a result of legal coercion (Romans 7:5). Be content to wait for the Holy Spirit to bear fruit that will last forever.
 
 {% include bible-study/bible-study-footer %}
 
