--- a/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
+++ b/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
@@ -42,3 +42,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) N
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Điều răn cũ, 2) Định nghĩa tình yêu.
 
+##  [<u>1 Giăng:2:28-3:10</u>]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Hãy ở trong Chúa. Tự mình làm nên thanh sạch. Ai ở trong Ngài thì không phạm tội. Ai không yêu anh em mình thì không phải là con cái Chúa.
+
