--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
@@ -1,6 +1,6 @@
 ---
 title: "1 John 2:28-3:10"
-excerpt: "Remain in Him. Has not yet been revealed. Purifies himself. Everyone who resides in him does not sin. So it is with the one who does not love his fellow Christians."
+excerpt: "Remain in Him. Purify himself. Everyone who resides in Him does not sin. So it is with the one who does not love his fellow Christians."
 image:
   teaser: 1-John-teaser.jpg
 tags: [john-epistles, bible-studies]
@@ -20,60 +20,89 @@ comments_locked: false
 
 {{ page.excerpt | markdownify }}
 
-[(<em>Bấm vào đây để đọc tiếng Việt</em>)]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v7-27-Viet %})
+[(<em>Bấm vào đây để đọc tiếng Việt</em>)]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet %})
 <div>
 <p>
 <img alt src="{{ site.url }}/assets/images/1-John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-In today's study of 1 John 2:7-27, you will read the Apostle John's extensive exhortation on love, particularly how it is framed in a commandment. When you read his teaching, remember to read it not for others, but for yourself, with the intent to experience it firsthand. There is no point in attempting to teach others unless you are confident that you can meet its highest expectations. I'm afraid I'm writing more to ask questions than to provide answers. But my inquiries are sincere, and I am confident that the Holy Spirit will lead me to the truth.
+Today's study is not any easier than the last one on 1 John 2:7-27. I had to rely on even more foundation truths as anchor points to analyze what John is saying in today's passage.
 </p>
 </div>
 
-## THE OLD COMMANDMENT
+## REMAIN IN HIM  
 
 <span style="color: rgb(159, 29, 33);">
-*“<sup>7</sup>Dear friends, I am not writing a new commandment to you, but an **old commandment** which you have had from the beginning. The old commandment is the word that you have already heard."*
+*“<sup>28</sup>And now, little children, <strong>remain in him</strong>, so that when he appears we may have confidence and not <strong>shrink away from him</strong> in shame when he comes back. <sup>29</sup>If you know that he is righteous, you also know that everyone who <strong>practices righteousness</strong> has been fathered by him.”*
 </span>
-(1 John 2:7)
+(1 John 2:28-29) 
 
-Subsequently, John let us know what the commandment is in verse 9:
+***Remain in Him***
+Since I became a Christian more than 30 years ago, I've been under the assumption that *“remaining in Him”* meant doing things that Christians do, like as attending prayer groups, Bible studies, attending church, participating in evangelistic outreach, tithing, and so forth.  
+
+As a result of failing to do the things required to *"remain in Him,"* you will *"shrink away from Him,"* which means you will hear God say to you, *"depart from me, you worker of iniquity."*  (Matthew 7:23) 
+
+If this is what you mean by *"remain in him,"* I wish you the best, because even your best efforts, which are *"filthy rags"* (Isaiah 64:6), will not allow you to remain in him. In fact, your faith in the work that Jesus already did on the cross is the only thing that keeps you in him. Anything else is *"garbagge."* (Philippians 3:8) I hope this is what John is attempting to teach, but I have my doubts.
+
+***Practice righteousness***
+While it is true that a child of God will inevitably reflect his character, as *"every good tree bears good fruit"* (Matthew 7:17), someone doing righteous work may not be proof of their being children of God.
+
+
+> <span style="color: rgb(0, 61, 152);"><sup>22</sup>Many will say to me on that day, ‘Lord, Lord, did we not prophesy in your name and in your name drive out demons and in your name perform many miracles?’ <sup>23</sup>Then I will tell them plainly, ‘I never knew you. Away from me, you evildoers!’ (Matthew 7:22-23)</span>
+
+1 Corinthians 13:2-3 also mentions people who boast great virtues but lack love, implying that they do not have Christ:
+
+> <span style="color: rgb(0, 61, 152);"><sup>2</sup>If I have the gift of prophecy and can fathom all mysteries and all knowledge, and if I have absolute faith so as to move mountains, but have not love, I am nothing. <sup>3</sup> If I give all I possess to the poor and exult in the surrender of my body, but have not love, I gain nothing. (1 Cor 13:2-3)</span>
+
+As a result, John's claim that *"everyone who practices righteousness has been fathered by him"* is not a fundamental truth, because there is only one requirement to become a child of God: faith in the One whom God has sent (John 6:29).
+
+## PURIFIES HIMSELF  
 
 <span style="color: rgb(159, 29, 33);">
-*“<sup>9</sup>The one who says he is in the light but still hates his fellow Christian is still in the darkness. <sup>10</sup>The one who loves his fellow Christian resides in the light, and there is no cause for stumbling in him. <sup>11</sup>But the one who hates his fellow Christian is in the darkness, walks in the darkness, and does not know where he is going, because the darkness has blinded his eyes.”*
+*“<sup>3</sup>And everyone who has this hope focused on him <strong>purifies himself</strong>, just as Jesus is pure.”*
 </span>
-(1 John 2:9-11)
+(1 John 3:3) 
 
-I’m assuming this is what John remembered Jesus say when he was still on earth:
+What method do you recommend for us to purify ourselves? Fasting, ritual washing, abstaining from wine, or, as the Colossians advise, *"do not handle, do not touch, do not taste"*? (Colossians 2:21) Are these ideas in accordance with biblical fundamental truths? Consider the following Bible passages:
 
-> <span style="color: rgb(0, 61, 152);">
-*“ ‘<sup>37</sup>Love the Lord your God with all your heart and with all your soul and with all your mind.’ <sup>38</sup>This is the first and greatest commandment. <sup>39</sup>And the second is like it: ‘Love your neighbor as yourself.’  <sup>40</sup>All the Law and the Prophets hang on these two commandments.”*</span> (Matthew 22:37-40)
+> <span style="color: rgb(0, 61, 152);">*“You are clean already because of the word that I have  spoken to you.”* (John 15:3)<br />    *“To sanctify her \[the church\] by cleansing her with the washing of the water by the word.”* (Ephesians 5:26)<br />    *“Some of you once lived this way. But you were washed, you were sanctified, you were justified in the name of the Lord Jesus Christ and by the Spirit of our God.”* (1 Cor 6:11)</span>
 
-We know that Jesus gave this new commandment, which is actually an old commandment phrased differently, to combine all of God's commandments, including the Ten Commandments, in order to demolish mankind's expectations of achieving God's righteousness through obedience. Jesus use this commandment to point those who lived under the law toward the cross where he ushers in the New Covenant. John wanted to hold them back, or he's using the commandment as a continuation of the old system.
+According to the preceding verses, we were not only washed, but also sanctified and justified, all because of God's Word and not by any other works. I love the simplicity and directness of the above-quoted John 15:3: *"You are already clean because of THE WORD I spoke to you."*  I'm hoping that's what John had in mind, but I suspect John was among the apostles who were caught up in the web of the law.
 
-What do you think John's *"old commandment"* will achieve? If he believes that using the law will inspire good behavior, he is gravely mistaken, because:
+It is admirable to avoid activities that are harmful to oneself and others and to engage in positive activities, but if you believe they will make you more holy, you are mistaken. Your flesh is incapable of cleansing itself. God's Word cleanses you, magnifying the power of the blood of the Lamb of God in your mind.
 
-> <span style="color: rgb(0, 61, 152);">
-*“<sup>8</sup>But sin, seizing the opportunity through the commandment, produced in me all kinds of wrong desires. For apart from the law, sin is dead. <sup>9</sup>And I was once alive apart from the law, but <u>with the coming of the commandment sin became alive <sup>10</sup>and I died</u>.”*</span> (Romans 7:8-10)
+## EVERYONE WHO RESIDES IN HIM DOES NOT SIN
 
-John intended to use the law through the commandments to produce love, but the above verse indicates that *"wrong desires"* will be produced instead. As opposed to love, wrong desires can include hatred and jealousy.
 
-## DEFINITION OF LOVE
-
-Below is the definition of love according to the Greek Dictionary. Love is ἀγαπάω in Greek:
-
-> <span style="color: rgb(0, 61, 152);">
-***G25 - ἀγαπάω – agapaō - ag-ap-ah'-o**<br />
-Perhaps from ἄγαν agan (much; or compare [H5689]); to love (in a social or moral sense): - (be-) love (-ed).*
+<span style="color: rgb(159, 29, 33);">
+*“<sup>6</sup><strong>Everyone who resides in him does not sin</strong>; everyone who sins has neither seen him nor known him. <sup>7</sup>Little children, let no one deceive you: The one who practices righteousness is righteous, just as Jesus is righteous. <sup>8</sup>The one who practices sin is of the devil, because the devil has been sinning from the beginning. For this purpose the Son of God was revealed: to destroy the works of the devil.”*
 </span>
+(1 John 3:6-8)  
 
-***agapaō*** is the highest kind of love, and it was this term that Jesus used twice to question the apostle Peter: <i>"Peter, do you love - ***agapaō*** - me?"</i>, and both times his answer was that he could only ***philéo*** Jesus, a type of friendship love that is not of the same quality as ***agapaō***. How can John expect believers to do what Peter refused to do with that definition?  My reaction to John's *"old commandment"* should be self-evident. Note that the verb used in John's old commandment is ***agapaō***.
+The concept *“Everyone who resides in him does not sin”* is contradictory to what he wrote at the start of chapter 2:  
 
-## IN CONCLUSION
+ >  <span style="color: rgb(0, 61, 152);">*“<sup>1</sup>My little children, I am writing these things to you so that you may not sin. But if anyone does sin, we have an advocate with the Father, Jesus Christ the Righteous One, <sup>2</sup>and he himself is the atoning sacrifice for our sins, and not only for our sins but also for the whole world.”* (1 John 2:1-2)  </span>
+ 
+According to the verses quoted above, John admitted that a believer can still sin and, as a result, requires an advocate before the Father. The good news, according to my understanding of the gospel, is not that we can't sin, but that we are forgiven. I can imagine someone reading verse 6 and believing it wholeheartedly, then falling into some sort of sin and concluding that they have *"neither seen nor known him."*  It's no surprise that so few Christians are certain of their salvation.
 
-The remainder of chapter 2 just contains general teaching on Christian living, so I'll leave it to the individuals to study on their own. Each person can rely on the Holy Spirit's guidance to live in accordance with their unique circumstances and experiences.
+## TO PRACTICE RIGHTEOUSNESS IS TO LOVE FELLOW CHRISTIANS  
 
-One thing we must keep reiterating is that we cannot please God or maintain our relationship with him by relying on the law in any form. This is the fundamental and most crucial feature of the NEW COVENANT. We must recognize that we are easily tempted to return to the law. If obeying the law does not bring us salvation, it will not help us live out our Christian lives, as shown in Romans 7:8-10. Instead of looking to Jesus, who is the author and finisher of our faith, law-based teaching tends to make us look to ourselves to try to achieve what Jesus had to die on the cross to do for us.
+<span style="color: rgb(159, 29, 33);">
+*“By this the children of God and the children of the devil are revealed: Everyone who does not practice righteousness – the one who does not love his fellow Christian – is not of God.” *
+</span>
+(1 John 3:10)  
 
-I'm afraid John, or whoever wrote this letter, did not completely grasp the significance of the New Covenant gospel.
+Here in verse 10, John defines what it means to practice righteousness: to love one's brothers and sisters in the Lord. However, as I previously stated, I believe this love must be a fruit of the Spirit, an inevitable outpouring of God's work in the life of someone born from above.  It cannot be born from the coersive environment of the law. In such a context, the love is not genuine and born out of fear.
+
+There are several challenges to John's thesis *"the one who does not love his fellow Christian is not of God."*  Why should you love only Christians? Why not your enemy, too? (Matthew 5:43-48). Besides, if you want to be like Christ, you should love the world (John 3:16). It's much easier to love fellow Christians than loving people who don't fit your mold or expectations.
+
+When Jesus gave the love commandment, he did it with the intention of defeating man's pride thinking they can be like God, and ultimately to drive them to the foot of the cross. But most people mistakenly think they can love like God.
+
+## CONCLUSION  
+
+Tại sao Chúa lại để trong Kinh thánh những đoạn dường như mâu thuẫn với những chân lý nền tảng chẳng hạn như sự dạy dỗ của sứ đồ Phao-lô về sự xưng công bình bởi đức tin? Tôi tin rằng Chúa đã cố tình dùng sự dạy dỗ dường như đặt nền tảng trên luật pháp của Giăng làm hòn đá vấp chân cho những người có khuynh hướng cậy vào luật pháp để được sự công bình của Đức Chúa Trời. Những đoạn Kinh thánh này trở thành khí cụ của Chúa để phân biệt rơm rạ và lúa mì, tin lành chân thật và giả dối.
+
+Nhiều nhà bình luận Thánh Kinh đã gắng sức để hòa giải những đoạn Kinh thánh mâu thuẫn hầu đi đến một giải thích có tính cách hòa giải, nhưng không thể nào có sự hòa đồng giữa trắng và đen, đức tin và luật pháp, chân lý và giả dối. Những nỗ lực này không thể dẫn tín hữu đến với chân lý.
+
+Có quá nhiều những ý niệm trong thơ Giăng thứ nhất mâu thuẫn với những chân lý nền tảng về sự xưng công bình bởi đức tin và Giao Ước Mới. Dầu vậy, trong sự nghiên cứu những đoạn Kinh thánh này, chúng ta đã chứng tỏ mình là những chiến sĩ tâm linh nắm chặt lấy gươm phúc âm của Đấng Christ.
 
 {% include bible-study/bible-study-footer %}
 
