--- a/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet.md
+++ b/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet.md
@@ -1,6 +1,6 @@
 ---
-title: "1 Giăng 2:7-27"
-excerpt: "Điều răn cũ. Định nghĩa tình yêu."
+title: "1 Giăng 2:28-3:10"
+excerpt: "Hãy ở trong Chúa. Tự mình làm nên thanh sạch. Ai ở trong Ngài thì không phạm tội. Ai không yêu anh em mình thì không phải là con cái Chúa."
 image:
   teaser: 1-Giang-teaser.jpg
 tags: [john-epistles, bible-studies]
@@ -22,54 +22,74 @@ comments_locked: false
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/1-John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-Trong bài học hôm nay theo 1 John 2:7-27, bạn sẽ được đọc nhiều lời viết của sứ đồ Giăng nhấn mạnh về sự yêu thương, nhất là khi những lời dạy đó được lồng dưới khuôn khổ của một điều răn. Khi bạn đọc thơ Giăng, hãy nhớ một điều rằng đừng đọc cho người khác, nhưng với chủ ý chính mình phải từng trải và áp dụng những dạy dỗ đó. Nếu bạn không vững tin rằng mình có thể đạt được tiêu chuẩn cao vời của những lời Giăng viết thì đừng dạy người khác. E rằng tôi viết nhiều để nêu lên những nghi vấn hơn là đem đến câu trả lời. Dầu vậy, những nghi vấn của tôi là đến bởi lòng thành, và tôi tin rằng Đức Thánh Linh sẽ dẫn tôi vào mọi lẽ thật.
+<img alt src="{{ site.url }}/assets/images/1-Giang-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+Bài học này cũng không dễ gì hơn bài học tuần trước theo 1 Giăng 2:7-27. Tôi đã phải dựa vào nhiều chân lý nền tảng hơn nữa đề làm điểm tựa hầu có thể phân tích những điều sứ đồ Giăng đã viết trong đoạn Kinh thánh hôm nay.
 </p>
 </div>
 
-## ĐIỀU RĂN CŨ
+## HÃY Ở TRONG CHÚA
 
 <span style="color: rgb(159, 29, 33);">
-*“<sup>7</sup>Hỡi kẻ rất yêu dấu, ấy chẳng phải là điều răn mới mà   ta viết cho anh em, bèn là <strong>điều răn cũ</strong> anh em đã nhận lấy từ lúc ban đầu; điều răn cũ nầy tức là lời anh em đã nghe."*
+*“<sup>28</sup>Vậy bây giờ, hỡi các con cái bé mọn ta, <strong>hãy ở trong Ngài</strong>, hầu cho, nếu Ngài hiện đến, chúng ta cũng đầy sự vững lòng, không <strong>bị hổ thẹn và quăng xa khỏi Ngài trong kỳ Ngài ngự đến</strong>. <sup>29</sup>Ví bằng các con biết Ngài là công bình, thì hãy biết rằng <strong>người nào làm theo sự công bình, ấy là kẻ bởi Ngài mà sanh ra.</strong>”*
 </span>
-(1 John 2:7)
+(1 John 2:28-29) 
 
-Tiếp theo sau đó, Giăng diễn tả thêm ý nghĩa của *"điều răn cũ"* :
+***Hãy ở trong Ngài***
+Từ khi tin Chúa cách đây hơn 30 năm, tôi đã thường có một giả định là *"ở trong Chúa"* nghĩa là làm những điều người tin Chúa hay làm, chẳng hạn như tham dự những buổi nhóm cầu nguyện, học Kinh thánh, đi nhà thờ, tham dự những buổi nhóm truyền giảng, dâng hiến, vân vân.
+
+Kết quả là nếu bạn không làm được những điều để được *"ở trong Chúa,"* bạn sẽ bị *"hổ thẹn và quăng xa khỏi Ngài,"* nghĩa là bạn sẽ nghe Chúa phán với mình rằng *"ta chẳng biết các ngươi bao giờ, hãy lui ra khỏi ta!"*  (Matthew 7:23) 
+
+Nếu quả thật bạn tin rằng đó là ý nghĩa của sự *"ở trong Chúa,"* chúc bạn may mắn, vì dù bạn có cố gắng đến đâu chăng nữa, những nỗ lực đó cũng chỉ là *"tấm áo nhớp"* (Isaiah 64:6) sẽ không giúp bạn được ở trong Chúa đâu. Sự thực là chỉ có đức tin của bạn nơi sự chết của Chúa trên cây thập tự là điều duy nhất cho phép bạn ở trong Ngài. Mọi sự khác chỉ là *"rơm rác."* (Philippians 3:8) Tôi cũng hy vọng rằng đây là điều Giăng đang bày tỏ, nhưng không chắc lắm.
+
+***Làm theo sự công bình***
+Mặc dầu sự thật là con cái Đức Chúa Trời phải phản ảnh bản tính của Ngài, như *"cây lành thì sinh quả lành"* (Matthew 7:17), nhưng các việc công bình của một người không phải là tiêu chuẩn để người đó trở nên con cái Đức Chúa Trời.
+
+> <span style="color: rgb(0, 61, 152);"><sup>22</sup>Ngày đó, sẽ có nhiều người thưa cùng ta rằng: Lạy Chúa, lạy Chúa, chúng tôi chẳng từng nhơn danh Chúa mà nói tiên tri sao? nhơn danh Chúa mà trừ quỉ sao? và lại nhơn danh Chúa mà làm nhiều phép lạ sao? <sup>23</sup>Khi ấy, ta sẽ phán rõ ràng cùng họ rằng: Hỡi kẻ làm gian ác, ta chẳng biết các ngươi bao giờ, hãy lui ra khỏi ta!" (Matthew 7:22-23)</span>
+
+1 Corinthians 13:2-3 cũng nói đến những người làm được những công việc vĩ đại trong danh Chúa nhưng không có tình yêu thương, nghĩa là không có Chúa:
+
+> <span style="color: rgb(0, 61, 152);"><sup>2</sup>Dầu tôi được ơn nói tiên tri, cùng biết đủ các sự mầu nhiệm, và mọi sự hay biết; dầu tôi có cả đức tin đến nỗi dời núi được, nhưng không có tình yêu thương, thì tôi chẳng ra gì. <sup>3</sup>Dầu tôi phân phát gia tài để nuôi kẻ nghèo khó, lại bỏ thân mình để chịu đốt, song không có tình yêu thương, thì điều đó chẳng ích chi cho tôi. (1 Cor 13:2-3)</span>
+
+Do đó, lời tuyên bố của Giăng là *"người nào làm theo sự công bình, ấy là kẻ bởi Ngài mà sanh ra"* không phải là một chân lý nền tảng, vì chỉ có một điều kiện duy nhất để được trở nên con cái Đức Chúa Trời: tin vào Đấng mà Đức Chúa Trời đã sai đến (John 6:29).
+
+## TỰ MÌNH LÀM NÊN THANH SẠCH
+
+<span style="color: rgb(159, 29, 33);"> *“<sup>3</sup>Ai có sự trông cậy đó trong lòng, thì tự mình làm nên thanh sạch, cũng như Ngài là thanh sạch.”* </span> (1 John 3:3) 
+
+Bạn có thể đề nghị một phương pháp gì để tôi tự mình làm thanh sạch? Ăn chay, dự lễ rửa, tránh uống rượu, hay làm như người Cơ-lô-se, *"chớ lấy, chớ nếm, chớ rờ"*? (Colossians 2:21) Những giáo điều này có phù hợp với những chân lý nền tảng không? Mời bạn thử đọc các đoạn Kinh thánh dưới đây:
+
+> <span style="color: rgb(0, 61, 152);">*“Các ngươi đã được trong sạch, vì <u>lời</u> ta đã bảo cho.”* (John 15:3)<br />    *“để khiến Hội nên thánh sau khi lấy nước rửa và dùng <u>Lời Chúa</u> làm cho Hội tinh sạch”* (Ephesians 5:26)<br />    *“Trước kia anh em ít nữa cũng có một đôi người như thế; nhưng nhơn <u>danh Ðức Chúa Jêsus Christ, và nhờ Thánh Linh</u> của Ðức Chúa Trời chúng ta, thì anh em được rửa sạch, được nên thánh, được xưng công bình rồi.”* (1 Cor 6:11)</span>
+
+Theo những đoạn Kinh thánh trên, chúng ta không những được rửa sạch, mà còn được thánh hóa và được xưng công bình, tất cả chỉ nhờ lời Chúa chứ không phải nhờ một điều gì khác. Tôi yêu thích sự đơn giản và ngắn gọn của đoạn John 15:3 trích ở trên: *"Các ngươi được trong sạch, vì lời ta đã bảo cho."*  Tôi mong rằng đây cũng là ý của Giăng, như tôi e rằng Giăng là một trong những sứ đồ vẫn còn vướng vào lưới của luật pháp.
+
+Tránh những điều ác có thể làm hại đến bản thân hay người khác, và làm những điều lành là điều đáng khen ngợi, nhưng nếu bạn nghĩ là nhờ những hành động đó bạn được thanh sạch thì đó là một lầm lẫn lớn. Xác thịt bạn không thể tự nó làm mình thanh sạch. Chỉ lời Chúa mới có quyền năng đó, lời đó mở mang trong trí bạn quyền năng của dòng huyết báu của Chiên Con Đức Chúa Trời.
+
+## HỄ AI Ở TRONG CHÚA THÌ KHÔNG PHẠM TỘI
+
+<span style="color: rgb(159, 29, 33);"> *“<sup>6</sup><strong>Ai ở trong Ngài thì không phạm tội; còn ai phạm tội</strong>, thì chẳng từng thấy Ngài và chẳng từng biết Ngài. <sup>7</sup>Hỡi các con cái bé mọn, chớ để cho ai lừa dối mình: kẻ làm sự công bình là người công bình, như chính mình Chúa là công bình. <sup>8</sup>Kẻ nào phạm tội là thuộc về ma quỉ; vì ma quỉ phạm tội từ lúc ban đầu. Vả, Con Ðức Chúa Trời đã hiện ra để hủy phá công việc của ma quỉ.”* </span> (1 John 3:6-8)  
+
+Ý niệm *“Ai ở trong Ngài thì không phạm tội”* thì nghịch lại với điều Giăng đã viết ở đầu chương 2:
+
+ >  <span style="color: rgb(0, 61, 152);">*“<sup>1</sup>Hỡi con cái bé mọn ta, ta viết cho các con những điều nầy, hầu cho các con khỏi phạm tội. <u>Nếu có ai phạm tội</u>, thì chúng ta có Ðấng cầu thay ở nơi Ðức Chúa Cha, là Ðức Chúa Jêsus Christ, tức là Ðấng công bình, <sup>2</sup>Ấy chính Ngài làm của lễ chuộc tội lỗi chúng ta, không những vì tội lỗi chúng ta thôi đâu, mà cũng vì tội lỗi cả thế gian nữa.”* (1 John 2:1-2)  </span>
+ 
+Theo những câu kinh thánh được trích ở trên, Giăng công nhận rằng người thuộc về Chúa cũng có thể phạm tội, và vì thế cần một Đấng cầu thay cho mình ở bên hữu Đức Chúa Cha. Tin mừng, theo sự hiểu biết của tôi về phúc âm, không phải là chúng ta không còn phạm tội nữa, nhưng là chúng ta được tha thứ. Hãy thử tưởng tượng một người đọc câu 6, lỡ lầm phạm tội, rổi vì thế kết luận rằng mình *"chẳng từng thấy Ngài và chẳng từng biết Ngài."*  Vì thế chúng ta chẳng ngạc nhiên là nhiều tín hữu không biết chắc mình được sự sống đời đời.
+
+## KẺ CHẲNG YÊU ANH EM MÌNH KHÔNG THUỘC VỀ CHÚA
 
 <span style="color: rgb(159, 29, 33);">
-*“<sup>9</sup>Kẻ nào nói mình trong sự sáng, mà ghét anh em mình thì còn ở trong sự tối tăm. <sup>10</sup>Ai yêu mến anh em mình thì ở trong sự sáng, nơi người đó chẳng có điều chi gây cho vấp phạm. <sup>11</sup>Nhưng ai ghét anh em mình, thì ở trong sự tối tăm, làm những việc tối tăm, và không biết mình đi  đâu, vì bóng tối tăm đã làm mù mắt người.”* </span>
-(1 John 2:9-11)
+*“Bởi đó, người ta nhận biết con cái Ðức Chúa Trời và con cái ma quỉ: ai chẳng làm điều công bình là không thuộc về Ðức Chúa Trời, kẻ chẳng yêu anh em mình cũng vậy.” * </span> (1 John 3:10)  
 
-Tôi thiết nghĩ đây có lẽ là những sự dạy dỗ Giăng đã nghe từ Chúa Giê-su nhất là đoạn Kinh thánh dưới đây:
+Trong câu 10, Giăng giải thích ý nghĩa của sự *"làm theo sự công bình"* là: yêu thương anh em trong Chúa. Thế nhưng, nhưng đã được trình bày ở trên, tôi tin rằng tình yêu này phải là bông trái của Thánh Linh, là một sự nẩy sinh không tránh được bởi Chúa trong đời sống người đã được tái sinh. Vì thế, As a result, nó không đến từ sự luyện tập hay thực hành. Sự luyện tập hàm ý nỗ lực của xác thịt, còn trái Thánh Linh chỉ đến từ Thánh Linh.
 
-> <span style="color: rgb(0, 61, 152);"> *“<sup>37</sup>Ðức Chúa Jêsus đáp rằng: Ngươi hãy hết lòng, hết linh hồn, hết ý mà yêu mến Chúa, là Ðức Chúa Trời ngươi.  <sup>38</sup>Ấy là điều răn thứ nhứt và lớn hơn hết.  <sup>39</sup>Còn điều răn thứ hai đây, cũng như vậy: Ngươi hãy yêu kẻ lân cận như mình.  <sup>40</sup>Hết thảy luật pháp và lời tiên tri đều bởi hai điều răn đó mà ra."*</span>   (Matthew 22:37-40)
-
-Chúng ta biết rằng điều răn mới mà Chúa Giê-su ban thực ra chỉ là điều răn cũ nhưng được bày tỏ qua một dạng khác. Điều răn đó gồm tóm những điều răn cũ, kể cả Mười Điều Răn, nhằm mục đích đập tan kỳ vọng của nhân loại mong nhờ sự giữ chúng mà đạt được sự công bình của Đức Chúa Trời. Chúa Giê-su đã dùng điều răn này làm hình bóng chỉ tới thập tự giá nơi Ngài ban nhân loại một Giao Ước Mới. Giăng thì lại muốn giữ họ lại dưới Giao Ước Cũ qua những điều răn.
-
-Thử nghĩ những *"điều răn cũ"* của Giăng sẽ đạt được những gì? Nếu ông tin rằng luật pháp sẽ khơi động những việc lành thì ông lầm lẫn to, vì:
-
-> <span style="color: rgb(0, 61, 152);"> *“<sup>8</sup>Ấy là tội lỗi đã nhơn dịp, bởi điều răn mà sanh ra mọi thứ ham muốn trong lòng tôi: vì không có luật pháp thì tội lỗi chết đi. <sup>9</sup>Ngày xưa tôi không có luật pháp mà tôi sống; <u>nhưng khi điều răn đến, thì tội lỗi lại sống, <sup>10</sup>còn tôi thì chết</u>; vậy thì té ra điều răn vốn nên làm cho tôi sống, đã dắt tôi đến sự chết.”*</span> (Romans 7:8-10)
-
-John intended to use the law through the commandments to produce love, but the above verse indicates that *"wrong desires"* will be produced instead. As opposed to love, wrong desires can include hatred and jealousy.
-
-## DEFINITION OF LOVE
-
-Below is the definition of love according to the Greek Dictionary. Love is ἀγαπάω in Greek:
-
-> <span style="color: rgb(0, 61, 152);">
-***G25 - ἀγαπάω – agapaō - ag-ap-ah'-o**<br />
-Perhaps from ἄγαν agan (much; or compare [H5689]); to love (in a social or moral sense): - (be-) love (-ed).*
-</span>
-
-***agapaō*** là cao trọng nhất trong các loại tình yêu, và Chúa Giê-su đã dùng từ đó hai lần khi hỏi Phi-e-rơ: <i>"Phi-e-rơ, con có yêu - ***agapaō*** - ta không?"</i>, và cả hai lần ông trả lời rằng ông chỉ có thể  ***philéo*** Chúa thôi. Đó là một loại tình yêu của bạn hữu không bằng tình yêu cao thượng nhất là ***agapaō***. Vậy thì tại sao Giăng lại đòi hỏi các tín hữu làm điều mà chính sứ đồ Phi-e-rơ từ chối vì không làm được? Phản ứng của tôi với *"điều răn cũ"* của Giăng là điều hiển nhiên. Chúng ta hãy ghi nhận rằng Giăng đã dùng từ ***agapaō*** trong điều răn cũ của ông.
+Tôi hoàn toàn đồng ý với câu 10 chỉ ngoại trừ ý niệm *"làm theo sự công bình."* Bạn có tình yêu Chúa là vì bạn đã được tái sinh, còn không thì chẳng có điều răn nào có thể khiến tình yêu vĩ đại của Chúa được sinh ra trong bạn.
 
 ## KẾT LUẬN
 
-Phần còn lại của chương 2 chỉ chứa đựng những giảng dậy tổng quát về nếp sống của người tin Chúa, vì thế tôi nghĩ mỗi người cứ tự học hỏi cho chính mình. Mỗi người cứ nhờ Thánh Linh hướng dẫn để sống tùy theo hoàn cảnh và kinh nghiệm sống của riêng họ.
+Why did the Lord allow passages in the Bible to appear to contradict the core truths we learned, such as Paul’s teachings about righteousness through faith? I believe it is God’s intention to catch people who have a predisposition to rely on the law’s works to achieve God’s righteousness. Those passages become God’s tool in identifying between wheat and chaaf, the real gospel and the false gospel.  
 
-Có một điều chúng ta cứ phải nhắc đi nhắc lại là chúng ta không thể cậy vào luật pháp dưới bất cứ hình thức nào để duy trì mối liên hệ với Chúa. Đây là đặc tính nền tảng và quan trọng nhất trong GIAO ƯỚC MỚI. Chúng ta cũng phải cảnh giác về khuynh hướng dễ bị cám dỗ trở về với luật pháp. Nếu luật pháp không thể mang lại sự cứu rỗi thì chúng ta cũng không thể nhờ nó mà sống như đã được bày tỏ trong Romans 7:8-10. Thay vì giúp chúng ta nhìn lên Chúa Giê-su là khởi đầu và thành toàn của đức tin, luật pháp lại có khuynh hướng lôi kéo chúng ta nhìn vào chính mình để tìm cách đạt được điều mà vì nó Chúa Giê-su đã phải chết trên thập giá.
+Many Bible commentators strive to reconcile the contradictory passages in order to come up with a reasonable interpretation, but there is no common ground between black and white, faith and law, truth and untruth. These attempts will not lead to genuine truth for the believers.  
 
-Tôi e rằng Giăng, hay người nào đó đã mạo danh ông viết thư này, đã không thấu hiểu tầm quan trọng của phúc âm Tân Ước.
+There are far too many concepts in First John’s letter that contradict the foundational truth of righteousness by faith and the New Covenant. Nonetheless, during our study of this passage, we have demonstrated that we are spiritual warriors who are clinging to the sword of Jesus Christ’s gospel.
 
 {% include bible-study/bible-study-footer %}
 
