--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
@@ -35,14 +35,14 @@ Today's study is not any easier than the last one on 1 John 2:7-27. I had to rel
 </span>
 (1 John 2:28-29) 
 
-***Remain in Him***
+***Remain in Him***<br />
 Since I became a Christian more than 30 years ago, I've been under the assumption that *“remaining in Him”* meant doing things that Christians do, like as attending prayer groups, Bible studies, attending church, participating in evangelistic outreach, tithing, and so forth.  
 
 As a result of failing to do the things required to *"remain in Him,"* you will *"shrink away from Him,"* which means you will hear God say to you, *"depart from me, you worker of iniquity."*  (Matthew 7:23) 
 
 If this is what you mean by *"remain in him,"* I wish you the best, because even your best efforts, which are *"filthy rags"* (Isaiah 64:6), will not allow you to remain in him. In fact, your faith in the work that Jesus already did on the cross is the only thing that keeps you in him. Anything else is *"garbagge."* (Philippians 3:8) I hope this is what John is attempting to teach, but I have my doubts.
 
-***Practice righteousness***
+***Practice righteousness***<br />
 While it is true that a child of God will inevitably reflect his character, as *"every good tree bears good fruit"* (Matthew 7:17), someone doing righteous work may not be proof of their being children of God.
 
 
