--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
@@ -98,11 +98,11 @@ When Jesus gave the love commandment, he did it with the intention of defeating 
 
 ## CONCLUSION  
 
-Tại sao Chúa lại để trong Kinh thánh những đoạn dường như mâu thuẫn với những chân lý nền tảng chẳng hạn như sự dạy dỗ của sứ đồ Phao-lô về sự xưng công bình bởi đức tin? Tôi tin rằng Chúa đã cố tình dùng sự dạy dỗ dường như đặt nền tảng trên luật pháp của Giăng làm hòn đá vấp chân cho những người có khuynh hướng cậy vào luật pháp để được sự công bình của Đức Chúa Trời. Những đoạn Kinh thánh này trở thành khí cụ của Chúa để phân biệt rơm rạ và lúa mì, tin lành chân thật và giả dối.
+Why did the Lord allow passages in the Bible to appear to contradict the core truths we learned, such as Paul’s teachings about righteousness through faith? I believe it is God’s intention to catch people who have a predisposition to rely on the law’s works to achieve God’s righteousness. Those passages become God’s tool in identifying between wheat and chaaf, the real gospel and the false gospel.  
 
-Nhiều nhà bình luận Thánh Kinh đã gắng sức để hòa giải những đoạn Kinh thánh mâu thuẫn hầu đi đến một giải thích có tính cách hòa giải, nhưng không thể nào có sự hòa đồng giữa trắng và đen, đức tin và luật pháp, chân lý và giả dối. Những nỗ lực này không thể dẫn tín hữu đến với chân lý.
+Many Bible commentators strive to reconcile the contradictory passages in order to come up with a reasonable interpretation, but there is no common ground between black and white, faith and law, truth and untruth. These attempts will not lead to genuine truth for the believers.  
 
-Có quá nhiều những ý niệm trong thơ Giăng thứ nhất mâu thuẫn với những chân lý nền tảng về sự xưng công bình bởi đức tin và Giao Ước Mới. Dầu vậy, trong sự nghiên cứu những đoạn Kinh thánh này, chúng ta đã chứng tỏ mình là những chiến sĩ tâm linh nắm chặt lấy gươm phúc âm của Đấng Christ.
+There are far too many concepts in First John’s letter that contradict the foundational truth of righteousness by faith and the New Covenant. Nonetheless, during our study of this passage, we have demonstrated that we are spiritual warriors who are clinging to the sword of Jesus Christ’s gospel.
 
 {% include bible-study/bible-study-footer %}
 
