--- a/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
+++ b/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
@@ -38,5 +38,9 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) S
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Mỗi ngày một nên thánh hơn. Đứng vững trong đức tin.
 
+##  [<u>Cơ-lô-se 1:24-26</u>]({{ site.url }}{% post_url bible-studies-Viet/Colossians/2022-09-08-Colossians-01-v24-26-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Vui mừng trong hoạn nạn. Giảng trọn lời Chúa. Sự mầu nhiệm giấu kín nay được tỏ ra.
+
 Loạt bài này sẽ có thêm những bài tóm tắt sau mỗi lớp Trường Chúa Nhật. Nếu các bạn thấy những bài học này bổ ích cho đời sống bước đi theo Chúa, xin mời các bạn đến học mỗi sáng Chúa Nhật trên Zoom.
 
