--- a/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
+++ b/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
@@ -42,5 +42,9 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Mỗ
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Vui mừng trong hoạn nạn. Giảng trọn lời Chúa. Sự mầu nhiệm giấu kín nay được tỏ ra.
 
+##  [<u>Cơ-lô-se 1:27-2:4</u>]({{ site.url }}{% post_url bible-studies-Viet/Colossians/2022-09-08-Colossians-01-v27-ch2-v4-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự trông cậy về vinh hiển. Trọn vẹn trong Đấng Christ. Vững tâm nhờ biết Chúa. Lời dỗ dành lừa dối.
+
 Loạt bài này sẽ có thêm những bài tóm tắt sau mỗi lớp Trường Chúa Nhật. Nếu các bạn thấy những bài học này bổ ích cho đời sống bước đi theo Chúa, xin mời các bạn đến học mỗi sáng Chúa Nhật trên Zoom.
 
