--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
@@ -35,14 +35,16 @@ Today's study is not any easier than the last one on 1 John 2:7-27. I had to rel
 </span>
 (1 John 2:28-29) 
 
-***Remain in Him***<br />
-Since I became a Christian more than 30 years ago, I've been under the assumption that *“remaining in Him”* meant doing things that Christians do, like as attending prayer groups, Bible studies, attending church, participating in evangelistic outreach, tithing, and so forth.  
+***Remain in Him***
 
-As a result of failing to do the things required to *"remain in Him,"* you will *"shrink away from Him,"* which means you will hear God say to you, *"depart from me, you worker of iniquity."*  (Matthew 7:23) 
+Since I became a Christian more than 30 years ago, I've assumed that *"remaining in Him"* meant doing things that Christians do, such as attending prayer groups, Bible studies, church, participating in evangelistic outreach, tithing, and so on.
 
-If this is what you mean by *"remain in him,"* I wish you the best, because even your best efforts, which are *"filthy rags"* (Isaiah 64:6), will not allow you to remain in him. In fact, your faith in the work that Jesus already did on the cross is the only thing that keeps you in him. Anything else is *"garbagge."* (Philippians 3:8) I hope this is what John is attempting to teach, but I have my doubts.
+As a result, if I don't do the things necessary to *"remain in Him,"* I can't help but *"shrink away from Him,"* which means I'll hear God say to me, *"depart from me, you worker of iniquity"* (Matthew 7:23).
 
-***Practice righteousness***<br />
+I no longer believe this. If this is still your belief, I wish you the best, because even your best efforts, which are *"filthy rags"* (Isaiah 64:6), will not keep you in him. In fact, your faith in the work that Jesus already did on the cross is the only thing that keeps you in him. Everything else is *"garbage"*  (Philippians 3:8). I hope John is attempting to teach this, but I have my doubts.
+
+***Practice righteousness***
+
 While it is true that a child of God will inevitably reflect his character, as *"every good tree bears good fruit"* (Matthew 7:17), someone doing righteous work may not be proof of their being children of God.
 
 
@@ -52,7 +54,7 @@ While it is true that a child of God will inevitably reflect his character, as *
 
 > <span style="color: rgb(0, 61, 152);"><sup>2</sup>If I have the gift of prophecy and can fathom all mysteries and all knowledge, and if I have absolute faith so as to move mountains, but have not love, I am nothing. <sup>3</sup> If I give all I possess to the poor and exult in the surrender of my body, but have not love, I gain nothing. (1 Cor 13:2-3)</span>
 
-As a result, John's claim that *"everyone who practices righteousness has been fathered by him"* is not a fundamental truth, because there is only one requirement to become a child of God: faith in the One whom God has sent (John 6:29).
+As a result, John's claim that *"everyone who practices righteousness has been fathered by him"* is not a fundamental truth, at least not in accordance with the verses quoted above.
 
 ## PURIFIES HIMSELF  
 
@@ -65,9 +67,9 @@ What method do you recommend for us to purify ourselves? Fasting, ritual washing
 
 > <span style="color: rgb(0, 61, 152);">*“You are clean already because of the word that I have  spoken to you.”* (John 15:3)<br />    *“To sanctify her \[the church\] by cleansing her with the washing of the water by the word.”* (Ephesians 5:26)<br />    *“Some of you once lived this way. But you were washed, you were sanctified, you were justified in the name of the Lord Jesus Christ and by the Spirit of our God.”* (1 Cor 6:11)</span>
 
-According to the preceding verses, we were not only washed, but also sanctified and justified, all because of God's Word and not by any other works. I love the simplicity and directness of the above-quoted John 15:3: *"You are already clean because of THE WORD I spoke to you."*  I'm hoping that's what John had in mind, but I suspect John was among the apostles who were caught up in the web of the law.
+According to the preceding verses, we were not only washed, but also sanctified and justified, all because of God's Word and not by any other works. I love the simplicity and directness of the above-quoted John 15:3: *"You are already clean because of THE WORD I spoke to you."*  I'm hoping that's what John had in mind, but I suspect John was among the apostles who were caught up in the web of legalism.
 
-It is admirable to avoid activities that are harmful to oneself and others and to engage in positive activities, but if you believe they will make you more holy, you are mistaken. Your flesh is incapable of cleansing itself. God's Word cleanses you, magnifying the power of the blood of the Lamb of God in your mind.
+It is admirable to avoid activities that are harmful to oneself and others and to engage in positive activities, but if you think they will make you more holy, you are mistaken. Your flesh is incapable of cleansing itself. God's Word cleanses you, magnifying the power of the blood of the Lamb of God in your mind.
 
 ## EVERYONE WHO RESIDES IN HIM DOES NOT SIN
 
@@ -77,24 +79,30 @@ It is admirable to avoid activities that are harmful to oneself and others and t
 </span>
 (1 John 3:6-8)  
 
-The concept *“Everyone who resides in him does not sin”* is contradictory to what he wrote at the start of chapter 2:  
+Verse 6 threw me for a loop because if *"all have sinned and fall short of God's glory"* (Romans 3:23) then who *"resides in God and does not sin"*? Who *"practices righteousness"*? Who is not *"of the devil"*?
+
+Why did John make such a claim, given that he clearly knows Christians still sin, as he stated in the previous chapter:
 
  >  <span style="color: rgb(0, 61, 152);">*“<sup>1</sup>My little children, I am writing these things to you so that you may not sin. But if anyone does sin, we have an advocate with the Father, Jesus Christ the Righteous One, <sup>2</sup>and he himself is the atoning sacrifice for our sins, and not only for our sins but also for the whole world.”* (1 John 2:1-2)  </span>
- 
-According to the verses quoted above, John admitted that a believer can still sin and, as a result, requires an advocate before the Father. The good news, according to my understanding of the gospel, is not that we can't sin, but that we are forgiven. I can imagine someone reading verse 6 and believing it wholeheartedly, then falling into some sort of sin and concluding that they have *"neither seen nor known him."*  It's no surprise that so few Christians are certain of their salvation.
+
+The good news, according to my understanding of the gospel, is not that we can't sin, but that we are forgiven. I can see someone reading verse 6 and believing it completely, then falling into some sort of sin and concluding that they have *"neither seen nor known him."* or that they are *"of the devil."* It comes as no surprise that only a small percentage of Christians are certain of their salvation.
 
 ## TO PRACTICE RIGHTEOUSNESS IS TO LOVE FELLOW CHRISTIANS  
 
 <span style="color: rgb(159, 29, 33);">
-*“By this the children of God and the children of the devil are revealed: Everyone who does not practice righteousness – the one who does not love his fellow Christian – is not of God.” *
+*“By this the children of God and the children of the devil are revealed: Everyone who does not practice righteousness – <strong>the one who does not love his fellow Christian – is not of God</strong>.”*
 </span>
 (1 John 3:10)  
 
-Here in verse 10, John defines what it means to practice righteousness: to love one's brothers and sisters in the Lord. However, as I previously stated, I believe this love must be a fruit of the Spirit, an inevitable outpouring of God's work in the life of someone born from above.  It cannot be born from the coersive environment of the law. In such a context, the love is not genuine and born out of fear.
+While I agree with John that love for fellow Christians can be a good indicator that someone belongs to God, I believe it is incorrect to make love a requirement for salvation. This may not be John's intention at all; however, if it is, I am prepared to object.
 
-There are several challenges to John's thesis *"the one who does not love his fellow Christian is not of God."*  Why should you love only Christians? Why not your enemy, too? (Matthew 5:43-48). Besides, if you want to be like Christ, you should love the world (John 3:16). It's much easier to love fellow Christians than loving people who don't fit your mold or expectations.
+Love is a fruit of the Spirit, according to Galatians 5:22. It is the natural result of God's work in the life of someone born from above. And if it's a fruit of the Spirit, it can't be the result of your flesh's effort fueled by the law.
 
-When Jesus gave the love commandment, he did it with the intention of defeating man's pride thinking they can be like God, and ultimately to drive them to the foot of the cross. But most people mistakenly think they can love like God.
+Another objection to John's thesis is that *"he who does not love his fellow Christian is not of God."* It does not fulfill Jesus' command to love our enemies as well (Matthew 5:43-48). Indeed, if you want to be like Christ, you must love the entire world (John 3:16). It is far easier to love fellow Christians than it is to love those who do not fit your mold or expectations. John's expectation falls far short of God's righteousness standard.
+
+The righteousness that God bestows on us is not ours, and it never will be. It's an undeserved favor. It is a covering provided by God for naked sinners. According to Romans 3:23, *"all have sinned and fall short of the glory of God."*  Can unrighteous people do righteous things? No, because according to Isaiah 64:6, all of their works are *"filthy rags."*  God's work in and through you is the source of all your good works. Everything you do or practice was predestined and prepared by God after you were saved, not before (Ephesians 2:10). True good works can never be produced by the law's commandments, which produce only *"fruit for death"* (Romans 7:5). The caboose should never be placed ahead of the engine.
+
+Is John's caboose of *"love your fellow Christians"* positioned before or after the engine of faith in Christ?
 
 ## CONCLUSION  
 
@@ -102,7 +110,7 @@ Why did the Lord allow passages in the Bible to appear to contradict the core tr
 
 Many Bible commentators strive to reconcile the contradictory passages in order to come up with a reasonable interpretation, but there is no common ground between black and white, faith and law, truth and untruth. These attempts will not lead to genuine truth for the believers.  
 
-There are far too many concepts in First John’s letter that contradict the foundational truth of righteousness by faith and the New Covenant. Nonetheless, during our study of this passage, we have demonstrated that we are spiritual warriors who are clinging to the sword of Jesus Christ’s gospel.
+John's first letter contains far too many ideas that contradict the fundamental truths of righteousness by faith and the New Covenant. Nonetheless, when properly applied in the right context, we may find John's teaching useful.
 
 {% include bible-study/bible-study-footer %}
 
