--- a/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet.md
+++ b/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet.md
@@ -90,6 +90,14 @@ Sự công bình mà Đức Chúa Trời ban cho chúng ta cũng chẳng phải 
 
 Toa xe lửa của Giăng *"yêu thương anh em mình"* đang được đặt trước hoặc sau đầu tàu là đức tin nơi Đấng Christ?
 
+## SỰ CÔNG BÌNH - CỦA TÔI HAY TỪ CHÚA?
+Sự công bình mà Giăng muốn chúng ta *"làm"* ở đây có thể được kể vào loại *"sự công bình của tôi"*, như được Phao-lô diễn tả dưới đây:
+> _“ … <sup>9</sup>và được ở trong Ngài, được <strong>sự công bình, không phải của tôi bởi luật pháp mà đến</strong>, bèn là bởi tin đến Ðấng Christ mà được, tức là <strong>công bình đến bởi Ðức Chúa Trời</strong> và đã lập lên trên đức tin;”  (Philippians 3:9)
+
+Sự công bình đến bởi Đức Chúa Trời không phải là điều mà chúng ta có thể nhờ *"làm"* điều gì đó mà có được, bởi vì nó chỉ được ban cho chúng ta *"bởi tin đến Đấng Christ mà được"*', không phải bởi sức tôi cho dù tôi có ráng ra vẻ thiêng liêng đến đâu chăng nữa. Sự công bình của riêng một người chỉ có thể đến bởi các việc làm bởi sự đòi hỏi của luật pháp mà trước đó một chút Phao-lô đã gọi là *"rác rến"* trong Philippians 3:8.
+
+Thế thì công bình mà Giăng kêu gọi chúng ta *"làm"* là thuộc loại nào?
+
 ## KẾT LUẬN
 
 Tại sao Chúa lại để trong Kinh thánh những đoạn dường như mâu thuẫn với những chân lý nền tảng chẳng hạn như sự dạy dỗ của sứ đồ Phao-lô về sự xưng công bình bởi đức tin? Tôi tin rằng Chúa đã cố tình dùng sự dạy dỗ dường như đặt nền tảng trên luật pháp của Giăng làm hòn đá vấp chân cho những người có khuynh hướng cậy vào luật pháp để được sự công bình của Đức Chúa Trời. Những đoạn Kinh thánh này trở thành khí cụ của Chúa để phân biệt cỏ dại và lúa mì, tin lành chân thật và giả dối.
