--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
@@ -104,7 +104,16 @@ The righteousness that God bestows on us is not ours, and it never will be. It's
 
 Is John's caboose of *"love your fellow Christians"* positioned before or after the engine of faith in Christ?
 
-## CONCLUSION  
+## RIGHTEOUSNESS - MY OWN, OR FROM GOD?
+
+The righteousness that John attempts to practice here could be classified as *"my own righteousness,"* as Paul describes in Philippians:
+> _“ … <sup>9</sup>and be found in him, not because I have <strong>my own righteousness</strong> derived from the law, but because I have the righteousness that comes by way of Christ’s faithfulness – a <strong>righteousness from God</strong> that is in fact based on Christ’s faithfulness.”_ (Philippians 3:9)
+
+God's righteousness is not something you can *"practice"* because it is *"based on Christ's faithfulness,"* not my own, no matter how noble I try to spin it. Righteousness from your own efforts can only be derived from the law, which Paul refers to earlier in Philippians 3:8 as *"garbage."*
+
+What kind of righteousness does John exhort us to *"practice"*?
+
+## CONCLUSION
 
 Why did the Lord allow passages in the Bible to appear to contradict the core truths we learned, such as Paul’s teachings about righteousness through faith? I believe it is God’s intention to catch people who have a predisposition to rely on the law’s works to achieve God’s righteousness. Those passages become God’s tool in identifying between wheat and chaaf, the real gospel and the false gospel.  
 
