--- a/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
+++ b/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
@@ -46,5 +46,9 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Vui 
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Sự trông cậy về vinh hiển. Trọn vẹn trong Đấng Christ. Vững tâm nhờ biết Chúa. Lời dỗ dành lừa dối.
 
+##  [<u>Cơ-lô-se 2:5-10</u>]({{ site.url }}{% post_url bible-studies-Viet/Colossians/2022-09-08-Colossians-02-v5-10-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Đức tin vững vàng. Đã tin Chúa thể nào thì hãy sống như vậy. Các lý thuyết lừa dối. Sự đầy dẫy của bổn tánh Đức Chúa Trời. Bạn đã được đầy dẫy mọi sự.
+
 Loạt bài này sẽ có thêm những bài tóm tắt sau mỗi lớp Trường Chúa Nhật. Nếu các bạn thấy những bài học này bổ ích cho đời sống bước đi theo Chúa, xin mời các bạn đến học mỗi sáng Chúa Nhật trên Zoom.
 
