--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v7-27.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v7-27.md
@@ -21,10 +21,11 @@ comments_locked: false
 {{ page.excerpt | markdownify }}
 
 [(<em>Bấm vào đây để đọc tiếng Việt</em>)]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v7-27-Viet %})
+
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/1-John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-In today's study of 1 John 2:7-27, you will read the Apostle John's extensive exhortation on love, particularly how it is framed in a commandment. When you read his teaching, remember to read it not for others, but for yourself, with the intent to experience it firsthand. There is no point in attempting to teach others unless you are confident that you can meet its highest expectations. I'm afraid I'm writing more to ask questions than to provide answers. But my inquiries are sincere, and I am confident that the Holy Spirit will lead me to the truth.
+<img alt src="http://vacsf.org/assets/images/1-John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+The Bible contains a wide range of information. A portion of it contains historical information to provide context, another portion contains teachings intended to encourage good behavior and warn against bad behavior, and the final portion, in my opinion, contains the most valuable information, which I refer to as foundational truths that form the foundation of the gospel of Jesus Christ and define salvation. Most people believe that what John wrote falls into the second category. I respectfully disagree. I believe that most, if not all, of what he wrote appears to be moral teachings but is actually definitions of salvation that contradict the gospel.
 </p>
 </div>
 
@@ -47,33 +48,29 @@ I’m assuming this is what John remembered Jesus say when he was still on earth
 > <span style="color: rgb(0, 61, 152);">
 *“ ‘<sup>37</sup>Love the Lord your God with all your heart and with all your soul and with all your mind.’ <sup>38</sup>This is the first and greatest commandment. <sup>39</sup>And the second is like it: ‘Love your neighbor as yourself.’  <sup>40</sup>All the Law and the Prophets hang on these two commandments.”*</span> (Matthew 22:37-40)
 
-We know that Jesus gave this new commandment, which is actually an old commandment phrased differently, to combine all of God's commandments, including the Ten Commandments, in order to demolish mankind's expectations of achieving God's righteousness through obedience. Jesus use this commandment to point those who lived under the law toward the cross where he ushers in the New Covenant. John wanted to hold them back, or he's using the commandment as a continuation of the old system.
+The difference between Jesus' and John's love commandments was that Jesus' were meant for the world that was still under the rule of the Old Covenant, whereas John's were meant for Christians. They were not only aimed at different audiences, but they were also to serve different purposes.
 
-What do you think John's *"old commandment"* will achieve? If he believes that using the law will inspire good behavior, he is gravely mistaken, because:
+The purpose of Jesus' love commandment was to drive sinners to the cross. It was meant to inform them that they would not be able to love the way God expects them to.
 
-> <span style="color: rgb(0, 61, 152);">
-*“<sup>8</sup>But sin, seizing the opportunity through the commandment, produced in me all kinds of wrong desires. For apart from the law, sin is dead. <sup>9</sup>And I was once alive apart from the law, but <u>with the coming of the commandment sin became alive <sup>10</sup>and I died</u>.”*</span> (Romans 7:8-10)
+> Wherefore the law was our schoolmaster to bring us unto Christ, that we might be justified by faith. (Galatians 3:24&mdash;KJV)
 
-John intended to use the law through the commandments to produce love, but the above verse indicates that *"wrong desires"* will be produced instead. As opposed to love, wrong desires can include hatred and jealousy.
+John's love commandment aims at Christians asking them to do the very thing Jesus knew they couldn't.
 
 ## DEFINITION OF LOVE
 
-Below is the definition of love according to the Greek Dictionary. Love is ἀγαπάω in Greek:
+The Greek word agapao is translated as "love" in both Jesus' and John's love commandments. The word ***agapaō*** is used to describe the highest form of love, and it was this term that Jesus used twice to question the apostle Peter: <i>"Peter, do you love - ***agapaō*** - me?"</i>, Both times, Peter's response was that he could only ***philéo*** Jesus, a type of friendship love that is not of the same quality as ***agapaō***.
 
-> <span style="color: rgb(0, 61, 152);">
-***G25 - ἀγαπάω – agapaō - ag-ap-ah'-o**<br />
-Perhaps from ἄγαν agan (much; or compare [H5689]); to love (in a social or moral sense): - (be-) love (-ed).*
-</span>
+Based on their interaction, we can conclude that the distinction between ***agapaō*** and ***philéo*** must be significant. If not, why was Peter so hesitant to say that he could ***agapaō*** Jesus? Can any of us say that we can do better than Peter, that we can ***agapaō*** him?
 
-***agapaō*** is the highest kind of love, and it was this term that Jesus used twice to question the apostle Peter: <i>"Peter, do you love - ***agapaō*** - me?"</i>, and both times his answer was that he could only ***philéo*** Jesus, a type of friendship love that is not of the same quality as ***agapaō***. How can John expect believers to do what Peter refused to do with that definition?  My reaction to John's *"old commandment"* should be self-evident. Note that the verb used in John's old commandment is ***agapaō***.
+How can John expect believers to do what Peter refused to do because he knew it was impossible? My response to John's *"old commandment"* should be obvious. It is worth noting that the verb in John's old commandment is ***agapaō***, which is also the verb in Jesus' original love commandment. It is intended to disprove any notion that fallen man can achieve God's perfection.
 
-## IN CONCLUSION
+## CONCLUSION
 
 The remainder of chapter 2 just contains general teaching on Christian living, so I'll leave it to the individuals to study on their own. Each person can rely on the Holy Spirit's guidance to live in accordance with their unique circumstances and experiences.
 
-One thing we must keep reiterating is that we cannot please God or maintain our relationship with him by relying on the law in any form. This is the fundamental and most crucial feature of the NEW COVENANT. We must recognize that we are easily tempted to return to the law. If obeying the law does not bring us salvation, it will not help us live out our Christian lives, as shown in Romans 7:8-10. Instead of looking to Jesus, who is the author and finisher of our faith, law-based teaching tends to make us look to ourselves to try to achieve what Jesus had to die on the cross to do for us.
+We must continue to emphasize that we cannot please God or maintain our relationship with him by relying on the law in any form. This is the most fundamental and important feature of the NEW COVENANT. We must recognize how easily we are tempted to return to the law. As shown in Romans 7:8-10, if obeying the law does not bring us salvation, it will not help us live out our Christian lives. Instead of looking to Jesus, the author and finisher of our faith, law-based teaching encourages us to look to ourselves to accomplish what Jesus had to die on the cross to accomplish for us.
 
-I'm afraid John, or whoever wrote this letter, did not completely grasp the significance of the New Covenant gospel.
+I'm afraid John, who I assumed wrote this letter, didn't fully comprehend the significance of the New Covenant gospel.
 
 {% include bible-study/bible-study-footer %}
 
